--- a/Sections/NodePackageManager/package.json
+++ b/Sections/NodePackageManager/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "mongoose": "^5.3.1",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "jshint": "^2.9.6"
   }
 }
